image alignment issue fixed

--- a/style.css
+++ b/style.css
@@ -167,5 +167,7 @@ option {
     }
     .grid-item-g {
         padding: 5px;
+        display: flex;
+        justify-content: center;
     }
 }
